--- a/css/80s-hall.css
+++ b/css/80s-hall.css
@@ -1,6 +1,5 @@
 .banner80 {
     padding-top: 60px;
-    position: relative;
     padding-bottom: 50px;
 }
 .banner80__back {
@@ -9,6 +8,9 @@
     line-height: 28px;
     margin-bottom: 20px;
     padding-left: 45px;
+}
+.banner80__link {
+    position: relative;
 }
 .banner80__back::before {
     background-image: url(../img/halls/arrow-back.png);
@@ -19,14 +21,14 @@
     display: block;
     content: "";
     position: absolute;
-    top: 66px;
-    left: 128px;
+    top: 6px;
+    left: 0px;
 }
 .banner80__banner {
     background-image: url(../img/halls/80s-vibes.png);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 1440px;
+    width: 100%;
     height: 750px;
     margin-bottom: 100px;
 }
@@ -95,6 +97,7 @@
     display: flex;
     column-gap: 20px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .other-halls__wil-wes {
     background-image: url(../img/halls/wild-west.png);
@@ -120,19 +123,17 @@
     font-weight: 700;
     line-height: 120%;
     text-transform: uppercase;
-    width: 252px;
-    height: 72px;
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
     display: inline-block;
     position: relative;
-    top: 50%;
-    left: 64px;
+    width: 380px;
+    padding: 78px 118px;
 }
+
 .other-halls {
     padding-bottom: 77px;
 }
+
 
 @media(max-width:1024px) {
     
@@ -171,8 +172,8 @@
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 66px;
-        left: 50px;
+        top: 6px;
+        left: 0px;
     }
     .banner80 {
         padding-top: 50px;
@@ -219,9 +220,10 @@
         width: 288px;
         height: 172px;
     }
-    .other-halls__link  {
-        left: 18px;
-        top: 50px;
+   
+    .other-halls__link {
+        width: 288px;
+        padding: 50px 98px;
     }
     .other-halls {
         padding-bottom: 47px;
@@ -243,8 +245,8 @@
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 47px;
-        left: 38px;
+        top: 6px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 16px;
@@ -297,11 +299,10 @@
         height: 134px;
     }
     .other-halls__link  {
-        left: 37px;
-        top: 43px;
         font-size: 20px;
         line-height: 120%;
-        width: 150px;
+        width: 224px;
+        padding: 43px 78px;
     }
     .other-halls {
         padding-bottom: 35px;
@@ -310,6 +311,9 @@
         column-gap: 8px;
 }
 }
+
+
+
 @media(max-width:320px) {
     .banner80__text {
         left: 45px;
@@ -325,8 +329,8 @@
     .banner80__back::before {
         width: 16px;
         height: 5px;
-        top: 25px;
-        left: 17px;
+        top: 4px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 12px;
@@ -381,12 +385,10 @@
         height: 140px;
     }
     .other-halls__link  {
-        left: 109px;
-        top: 46px;
         font-size: 20px;
         line-height: 24px;
-        width: 63px;
-        padding: 0;
+        width: 280px;
+        padding: 46px 98px;
     }
     .other-halls {
         padding-bottom: 22px;
