--- a/css/banner.css
+++ b/css/banner.css
@@ -98,6 +98,7 @@
     font-weight: 900;
     line-height: 106px;
     color: rgb(205, 6, 255);
+    text-transform: uppercase;
 }
 
 .banner__list-column {
@@ -106,7 +107,7 @@
 }
 
 .banner__list-column-next {
-    width: 171px;
+    width: 195px;
     height: 210px;
     padding-top: 35px;
 }
@@ -124,13 +125,13 @@
 
 
 .banner__arrow-link:hover {
-    content: url("../img/icons-png/arrow-white.png");
+    content: url("../img/icons-svg/arrow-hover.svg");
     transition: 0.3s ease-in-out 0.1s;
     opacity: 1;
 }
 
 .banner__arrow-link:active {
-    content: url("../img/icons-png/arrow-purple.png");
+    content: url("../img/icons-svg/arrow-active.svg");
 }
 
 .banner__arrow-link:focus {
@@ -248,7 +249,7 @@
     }
     
     .banner__list-column-next {
-        width: 89px;
+        width: 110px;
         height: 92px;
         padding-top: 15px;
     }
@@ -256,7 +257,7 @@
         margin-bottom: 100px;
     }
     .banner__list {
-        width: 222px;
+        width: 244px;
 }
 .banner-container:after {
     width: 409px;
@@ -281,6 +282,47 @@
     padding-bottom: 40px;
 }
 }
+@media (max-width:600px) {
+    .banner-container:after {
+        width: 300px;
+        height: 400px;
+        bottom: 0;
+        right: 0;
+    }
+    .banner-info__title {
+        font-size: 70px;
+    }
+    .banner-info__title {
+        width: 100%;
+    }
+    .header__button {
+        display: none;
+    }
+}
+@media (max-width:474px) {
+    .banner-container:after {
+        width: 250px;
+        height: 280px;
+    }
+}
+@media (max-width:400px) {
+    .banner__button {
+        width: 150px;
+        height: 34px;
+        font-size: 12px;
+        line-height: 20px;
+        padding-top: 8px;
+    }
+    .banner-info__title {
+        font-size: 60px;
+    }
+    .banner-info__subtitle  {
+        font-size: 14px;
+    }
+}
+
+
+
 @media (max-width:320px)  {
     .banner-container {
         height: 204px;
