--- a/css/entertainments.css
+++ b/css/entertainments.css
@@ -38,42 +38,42 @@
 .entertainments--list__item_vr {
     background-image: url(../img/icons-png/VR.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 34px;
 }
 
 .entertainments--list__item_audio {
     background-image: url(../img/icons-png/audio-system.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 6px;
 }
 
 .entertainments--list__item_karaoke {
     background-image: url(../img/icons-png/karaoke.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 20px;
 }
 
 .entertainments--list__item_game {
     background-image: url(../img/icons-png/board-game.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 20px;
 }
 
 .entertainments--list__item_netflix {
     background-image: url(../img/icons-png/netflix.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 6px;
 }
 
 .entertainments--list__item_playstation {
     background-image: url(../img/icons-png/playstation.png);
     padding-left: 40px;
-    
+    transition: 0.5s ease;
     padding-bottom: 20px;
 }
 
@@ -206,6 +206,12 @@
     padding-top: 40px;
 }
 }
+@media (max-width:688px) {
+    .entertainments-list  {
+        justify-content: center;
+    }
+}
+
 @media (max-width:320px) {
     .section__title_short {
         font-size: 14px;
