--- a/css/faq.css
+++ b/css/faq.css
@@ -6,6 +6,7 @@
     line-height: 28px;
     padding: 30px 70px;
     margin-bottom: 20px;
+    width: 1180px;
 }
 
 .faq__questions :nth-child(even) {
@@ -19,13 +20,13 @@
     background-position: 95%;
 }
 .faq__questions :nth-child(even):hover {
-    background-image: url("../img/icons-png/open-hover.png");
+    background-image: url("../img/icons-svg/open-hover-white.svg");
     cursor: pointer;
     transition: 0.3s ease;
 }
 
 .faq__questions :nth-child(even):active {
-    background-image: url("../img/icons-png/open-active-white.png");
+    background-image: url("../img/icons-svg/open-active-white.svg");
     
 }
 
@@ -38,13 +39,13 @@
 }
 
 .faq__questions :nth-child(odd):hover {
-    background-image: url("../img/icons-png/open-hover-purple.png");
+    background-image: url("../img/icons-svg/open-hover-purple.svg");
     cursor: pointer;
     transition: 0.3s ease;
 }
 
 .faq__questions :nth-child(odd):active {
-    background-image: url("../img/icons-png/open-active-purple.png");
+    background-image: url("../img/icons-svg/open-active-purple.svg");
     
 }
 
@@ -56,6 +57,12 @@
 .faq {
     padding-bottom: 45px;
 }
+@media (max-width:1224px) {
+    .question {
+        width: 1000px;
+    }
+}
+
 
 @media (max-width:1024px) {
     .section__faq_title {
@@ -89,6 +96,16 @@
     padding-bottom: 35px;
 }
 }
+@media (max-width:940px) {
+    .question {
+        width: 800px;
+    }
+}
+@media (max-width:800px) {
+    .question {
+        width: 765px;
+    }
+}
 @media (max-width:768px)  {
     .section__faq_title {
         font-size: 24px;
@@ -104,6 +121,31 @@
     }
     .faq {
         padding-bottom: 35px;
+    }
+}
+@media (max-width:688px) {
+    .question {
+        width: 470px;
+        
+    }
+}
+@media (max-width:650px) {
+    .question {
+        width: 500px;
+        padding-top: 15px;
+    }
+}
+@media (max-width:490px) {
+            .question {
+            width: 370px;
+            font-size: 14px;
+            
+        }
+    }
+    @media (max-width:380px) {
+        .question {
+        width: 325px;
+              
     }
 }
 @media (max-width:320px) {
