--- a/css/header.css
+++ b/css/header.css
@@ -113,6 +113,14 @@
         transition: 0.3s;
     }
 }
+@media (max-width:600px)  {
+.header__row {
+    justify-content: space-between;
+}
+.header__button {
+    display: none;
+}
+}
 @media (max-width:320px) {
     .header__button {
         display: none;
