--- a/css/neon-hall.css
+++ b/css/neon-hall.css
@@ -1,14 +1,17 @@
 .banner80 {
     padding-top: 60px;
-    position: relative;
     padding-bottom: 50px;
 }
+
 .banner80__back {
     font-size: 22px;
     font-weight: 700;
     line-height: 28px;
     margin-bottom: 20px;
     padding-left: 45px;
+}
+.banner80__link {
+    position: relative;
 }
 .banner80__back::before {
     background-image: url(../img/halls/arrow-back.png);
@@ -19,14 +22,15 @@
     display: block;
     content: "";
     position: absolute;
-    top: 66px;
-    left: 128px;
+    top: 6px;
+    left: 0px;
 }
+
 .banner80__banner-n {
     background-image: url(../img/halls/banner-neon.png);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 1440px;
+    width: 100%;
     height: 750px;
     margin-bottom: 100px;
 }
@@ -94,6 +98,7 @@
     display: flex;
     column-gap: 20px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 .other-halls__80s {
     background-image: url(../img/halls/80s.png);
@@ -120,27 +125,31 @@
     font-weight: 700;
     line-height: 120%;
     text-transform: uppercase;
-    width: 252px;
-    height: 72px;
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
     display: inline-block;
     position: relative;
-    top: 38%;
-    left: 64px;
+    width: 380px;
+    padding: 78px 118px;
 }
 .other-halls {
     padding-bottom: 77px;
 }
+
 .other-halls__link-80 {
-    padding: 0;
-    top: 50%;
+    width: 380px;
+    padding: 96px 101px;
 }
-.other-halls__link-80s-vibes {
-    padding: 0;
-    top: 50%;
+@media(max-width:1180px)  {
+    .about80__img {
+width: 410px;
+height: 320px;
+    }
+    .banner80__text {
+        font-size: 80px;
+        width: 620px;
+    }
 }
+
 @media(max-width:1024px) {
     
     .logo__image {
@@ -172,14 +181,14 @@
         column-gap: 20px;
     }
     .banner80__banner {
-        width: 1024px;
+        width: 100%;
         height: 534px;
     }
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 58px;
-        left: 58px;
+        top: 6px;
+        left: 0px;
     }
     .banner80 {
         padding-top: 50px;
@@ -228,12 +237,28 @@
         height: 172px;
     }
     .other-halls__link  {
-        left: 18px;
-        top: 50px;
+        width: 288px;
+        padding: 50px 98px;
     }
     .other-halls {
         padding-bottom: 47px;
     }
+    .other-halls__link-80 {
+        width: 288px;
+        padding: 68px 62px;
+    }
+}
+@media(max-width:900px)  {
+    .about80__img {
+width: 330px;
+height: 320px;
+    }
+}
+@media(max-width:780px) {
+.banner80__text {
+    font-size: 80px;
+    width: 520px;
+}
 }
 @media(max-width:768px) {
     
@@ -245,14 +270,14 @@
         line-height: 120%;
     }
     .banner80__banner {
-        width: 768px;
+        width: 100%;
         height: 402px;
     }
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 47px;
-        left: 38px;
+        top: 6px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 16px;
@@ -306,11 +331,10 @@
         height: 134px;
     }
     .other-halls__link  {
-        left: 37px;
-        top: 43px;
+        width: 224px;
+        padding: 43px 78px;
         font-size: 20px;
         line-height: 120%;
-        width: 150px;
     }
     .other-halls {
         padding-bottom: 35px;
@@ -318,7 +342,57 @@
     .other-halls__list {
         column-gap: 8px;
 }
+.other-halls__link-80 {
+    width: 224px;
+    padding: 55px 54px;
 }
+}
+@media(max-width:690px) {
+    .banner80__description {
+        width: 400px;
+    }
+    
+    .about80__description {
+        height: auto;
+        text-align: center;
+        
+    }
+    .about80__img {
+        float: none;
+        margin: 0;
+    }
+    
+        .banner80__text {
+            font-size: 50px;
+            width: 380px;
+        
+        }
+    }
+    @media(max-width:510px){
+    .banner80__text {
+        font-size: 40px;
+        width: 280px;
+    }
+    }
+
+    @media(max-width:405px) {
+        .banner80__description {
+            width: 280px;
+        }
+        .banner80__text {
+            font-size: 40px;
+            width: 250px;
+            
+        }
+    }
+    @media(max-width:370px) {
+        .banner80__text {
+            font-size: 35px;
+            width: 210px;
+            
+        }
+    }
+
 @media(max-width:320px) {
     .banner80__text {
         left: 45px;
@@ -328,14 +402,14 @@
         line-height: 120%;
     }
     .banner80__banner {
-        width: 320px;
+        width: 100%;
         height: 168px;
     }
     .banner80__back::before {
         width: 16px;
         height: 5px;
-        top: 25px;
-        left: 17px;
+        top: 4px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 12px;
@@ -391,12 +465,11 @@
         height: 140px;
     }
     .other-halls__link  {
-        left: 109px;
-        top: 46px;
+        width: 280px;
+        padding: 46px 98px;
         font-size: 20px;
         line-height: 24px;
-        width: 63px;
-        padding: 0;
+        
     }
     .other-halls {
         padding-bottom: 22px;
@@ -413,5 +486,9 @@
 .logo__image {
     width: 66px;
     height: 42px;
+}
+.other-halls__link-80 {
+    width: 280px;
+    padding: 58px 54px;
 }
 }
