--- a/css/review.css
+++ b/css/review.css
@@ -10,33 +10,8 @@
     flex-wrap: wrap;
     column-gap: 20px;
 }
-.review__img {
-    background: radial-gradient(50.00% 50.00% at 50% 50%,
-    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_max.png");
-    border-radius: 140px;
-    width: 280px;
-    height: 280px;
-    margin-bottom: 11px;
-    background-size: cover;
-}
-.img__oksana {
-    background: radial-gradient(50.00% 50.00% at 50% 50%,
-    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_oksana.png");
-    border-radius: 140px;
-    width: 280px;
-    height: 280px;
-    background-size: cover;
-}
-.img__nikita {
-    background: radial-gradient(50.00% 50.00% at 50% 50%,
-    rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%), url("../img/icons-png/review_nikita.png");
-    border-radius: 140px;
-    width: 280px;
-    height: 280px;
-    background-size: cover;
-}
 
-.review__author {
+.review__about {
     width: 280px;
     text-align: center;
     font-size: 20px;
@@ -49,21 +24,25 @@
     font-weight: 400;
     line-height: 28px;
     padding-top: 52px;
-}
-
-.review__text {
     width: 680px;
 }
+
+
 
 .review__wrapper:not(:last-child) {
     margin-bottom: 50px;
 }
-.review__author-down {
-    display: none;
+.review__ava {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    mask-image: radial-gradient(50.00% 50.00% at 50% 50%,rgba(196, 196, 196, 0),rgba(108, 2, 135, 0.5) 100%);;
 }
 
+
+
 @media (max-width:1024px)  {
-    .review__img  {
+    .review__ava  {
         width: 172px;
         height: 172px;
     }
@@ -71,28 +50,28 @@
         max-width: 751px;
     }
     .review__wrapper {
-        column-gap: 38px;
+        column-gap: 12px;
     }
     .text__description {
         font-size: 18px;
         line-height: 26px;
         padding-top: 33px;
-    }
-    .review__text {
         width: 515px;
     }
-    .review__author  {
+    
+    .review__about  {
         width: 224px;
         font-size: 18px;
         line-height: 26px;
         text-align: start;
         padding-left: 15px;
     }
-    .review__author_nikita {
-        padding-left: 22px;
-    }
+    
     .review__wrapper:not(:last-child) {
         margin-bottom: 40px;
+    }
+    .review__about {
+
     }
 }
 
@@ -106,20 +85,19 @@
         line-height: 36px;
         margin-bottom: 31px;
     }
-    .review__img  {
+    .review__ava  {
         width: 153px;
         height: 153px;
         margin-bottom: 17px;
     }
-    .review__text {
-        width: 393px;
-    }
+    
     .text__description {
         font-size: 16px;
         line-height: 22px;
         padding-top: 30px;
+        width: 393px;
     }
-    .review__author  {
+    .review__about  {
         width: 156px;
         font-size: 14px;
         line-height: 20px;
@@ -132,9 +110,21 @@
         margin-bottom: 30px;
     }
 }
+@media (max-width:395px) {
+    .text__description {
+        padding-top: 0;
+        width: 300px;
+    }
+    .review__wrapper {
+        width: 320px;
+    }
+}
 @media (max-width:320px)  {
     .container__review {
         max-width: 288px;
+    }
+    .review__wrapper:not(:last-child) {
+        margin-bottom: 20px;
     }
     .section__title_review {
         font-size: 14px;
@@ -142,32 +132,29 @@
         line-height: 16px;
         margin-bottom: 15px;
     }
-    .review__img  {
+    .review__ava  {
         width: 86px;
         height: 86px;
         margin-bottom: 9px;
+        position: relative;
+        left: 35px;
     }
-    .review__text {
-        width: 280px;
+    .review__about  {
+        margin-bottom: 16px;
+        padding: 0;
+        text-align: center;
     }
+    
     .text__description {
         font-size: 12px;
         line-height: 16px;
         padding: 0;
+        width: 280px;
     }
-    .review__author {
-        display: none;
-    }
-    .review__author-down {
-        display: block;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 20px;
-        text-align: center;
-        margin-bottom: 16px;
-    }
+    
     .review__wrapper {
         justify-content: center;
     }
+    
 
 }
