--- a/css/star-wars-hall.css
+++ b/css/star-wars-hall.css
@@ -1,6 +1,5 @@
 .banner80 {
     padding-top: 60px;
-    position: relative;
     padding-bottom: 50px;
 }
 .banner80__back {
@@ -9,6 +8,9 @@
     line-height: 28px;
     margin-bottom: 20px;
     padding-left: 45px;
+}
+.banner80__link {
+    position: relative;
 }
 .banner80__back::before {
     background-image: url(../img/halls/arrow-back.png);
@@ -19,14 +21,14 @@
     display: block;
     content: "";
     position: absolute;
-    top: 66px;
-    left: 128px;
+    top: 6px;
+    left: 0px;
 }
 .banner80__banner-star-wars{
     background-image: url(../img/halls/banner-sw.png);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 1440px;
+    width: 100%;
     height: 750px;
     margin-bottom: 100px;
 }
@@ -120,22 +122,18 @@
     font-weight: 700;
     line-height: 120%;
     text-transform: uppercase;
-    width: 252px;
-    height: 72px;
     text-align: center;
-    padding-left: 50px;
-    padding-right: 50px;
     display: inline-block;
     position: relative;
-    top: 38%;
-    left: 64px;
+    width: 380px;
+    padding: 78px 118px;
 }
 .other-halls {
     padding-bottom: 77px;
 }
-.other-halls__link-80s-vibes {
-    padding: 0;
-    top: 50%;
+.other-halls__link-80 {
+    width: 380px;
+    padding: 96px 101px;
 }
 @media(max-width:1024px) {
     
@@ -174,8 +172,8 @@
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 66px;
-        left: 50px;
+        top: 6px;
+        left: 0px;
     }
     .banner80 {
         padding-top: 50px;
@@ -223,11 +221,15 @@
         height: 172px;
     }
     .other-halls__link  {
-        left: 18px;
-        top: 50px;
+        width: 288px;
+        padding: 50px 98px;
     }
     .other-halls {
         padding-bottom: 47px;
+    }
+    .other-halls__link-80 {
+        width: 288px;
+        padding: 68px 62px;
     }
 }
 @media(max-width:768px) {
@@ -246,8 +248,8 @@
     .banner80__back::before {
         width: 30px;
         height: 12px;
-        top: 47px;
-        left: 38px;
+        top: 6px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 16px;
@@ -300,17 +302,20 @@
         height: 134px;
     }
     .other-halls__link  {
-        left: 37px;
-        top: 43px;
+        width: 224px;
+        padding: 43px 78px;
         font-size: 20px;
         line-height: 120%;
-        width: 150px;
     }
     .other-halls {
         padding-bottom: 35px;
     }
     .other-halls__list {
         column-gap: 8px;
+}
+.other-halls__link-80 {
+    width: 224px;
+    padding: 55px 54px;
 }
 }
 @media(max-width:320px) {
@@ -328,8 +333,8 @@
     .banner80__back::before {
         width: 16px;
         height: 5px;
-        top: 25px;
-        left: 17px;
+        top: 4px;
+        left: 0px;
     }
     .banner80__back {
         font-size: 12px;
@@ -384,12 +389,10 @@
         height: 140px;
     }
     .other-halls__link  {
-        left: 109px;
-        top: 46px;
+        width: 280px;
+        padding: 46px 98px;
         font-size: 20px;
         line-height: 24px;
-        width: 63px;
-        padding: 0;
     }
     .other-halls {
         padding-bottom: 22px;
@@ -402,5 +405,9 @@
 .header__logo {
     margin-right: 0;
     
+}
+.other-halls__link-80 {
+    width: 280px;
+    padding: 58px 54px;
 }
 }
